@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.282 2023/08/16 22:24:57 markd Exp $
+# $NetBSD: Makefile,v 1.283 2023/08/16 22:25:25 wiz Exp $
 #
 
 COMMENT=	Communication programs
@@ -67,7 +67,6 @@ SUBDIR+=	libotr
 SUBDIR+=	libpurple
 SUBDIR+=	libsignal-protocol-c
 SUBDIR+=	libstrophe
-SUBDIR+=	libtelepathy
 SUBDIR+=	libtlen
 SUBDIR+=	loudmouth
 SUBDIR+=	lurch-purple
