@@ -1,49 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2009/06/14 17:37:47 joerg Exp $
-include/telepathy-1.0/libtelepathy/_gen-tp-constants-deprecated-aliases.h
-include/telepathy-1.0/libtelepathy/_gen-tp-constants-deprecated.h
-include/telepathy-1.0/libtelepathy/_gen-tp-constants-whitelist-aliases.h
-include/telepathy-1.0/libtelepathy/_gen-tp-interfaces-deprecated-aliases.h
-include/telepathy-1.0/libtelepathy/_gen-tp-interfaces-deprecated.h
-include/telepathy-1.0/libtelepathy/_gen-tp-interfaces-whitelist-aliases.h
-include/telepathy-1.0/libtelepathy/tp-ch-gen.h
-include/telepathy-1.0/libtelepathy/tp-chan-gen.h
-include/telepathy-1.0/libtelepathy/tp-chan-iface-chat-state-gen.h
-include/telepathy-1.0/libtelepathy/tp-chan-iface-dtmf-gen.h
-include/telepathy-1.0/libtelepathy/tp-chan-iface-group-gen.h
-include/telepathy-1.0/libtelepathy/tp-chan-iface-hold-gen.h
-include/telepathy-1.0/libtelepathy/tp-chan-iface-media-signalling-gen.h
-include/telepathy-1.0/libtelepathy/tp-chan-iface-password-gen.h
-include/telepathy-1.0/libtelepathy/tp-chan-iface-transfer-gen.h
-include/telepathy-1.0/libtelepathy/tp-chan-ifaces-signal-setters.h
-include/telepathy-1.0/libtelepathy/tp-chan-signals-marshal.h
-include/telepathy-1.0/libtelepathy/tp-chan-type-contact-list-gen.h
-include/telepathy-1.0/libtelepathy/tp-chan-type-room-list-gen.h
-include/telepathy-1.0/libtelepathy/tp-chan-type-streamed-media-gen.h
-include/telepathy-1.0/libtelepathy/tp-chan-type-text-gen.h
-include/telepathy-1.0/libtelepathy/tp-chan-type-tubes-gen.h
-include/telepathy-1.0/libtelepathy/tp-chan.h
-include/telepathy-1.0/libtelepathy/tp-conn-gen.h
-include/telepathy-1.0/libtelepathy/tp-conn-iface-aliasing-gen.h
-include/telepathy-1.0/libtelepathy/tp-conn-iface-avatars-gen.h
-include/telepathy-1.0/libtelepathy/tp-conn-iface-capabilities-gen.h
-include/telepathy-1.0/libtelepathy/tp-conn-iface-contact-info-gen.h
-include/telepathy-1.0/libtelepathy/tp-conn-iface-forwarding-gen.h
-include/telepathy-1.0/libtelepathy/tp-conn-iface-presence-gen.h
-include/telepathy-1.0/libtelepathy/tp-conn-iface-privacy-gen.h
-include/telepathy-1.0/libtelepathy/tp-conn-iface-renaming-gen.h
-include/telepathy-1.0/libtelepathy/tp-conn-ifaces-signal-setters.h
-include/telepathy-1.0/libtelepathy/tp-conn-signals-marshal.h
-include/telepathy-1.0/libtelepathy/tp-conn.h
-include/telepathy-1.0/libtelepathy/tp-connmgr-gen.h
-include/telepathy-1.0/libtelepathy/tp-connmgr-signals-marshal.h
-include/telepathy-1.0/libtelepathy/tp-connmgr.h
-include/telepathy-1.0/libtelepathy/tp-constants.h
-include/telepathy-1.0/libtelepathy/tp-helpers.h
-include/telepathy-1.0/libtelepathy/tp-ifaces-signals-marshal.h
-include/telepathy-1.0/libtelepathy/tp-interfaces.h
-include/telepathy-1.0/libtelepathy/tp-media-session-handler-gen.h
-include/telepathy-1.0/libtelepathy/tp-media-stream-handler-gen.h
-include/telepathy-1.0/libtelepathy/tp-props-iface-gen.h
-include/telepathy-1.0/libtelepathy/tp-props-iface.h
-lib/libtelepathy.la
-lib/pkgconfig/libtelepathy.pc
